# superconducting_emulator

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  flake.nix  pyproject.toml
src/qjit/: utils.py
src/qjit/experiments/error_counts/ecc/: encoded_circuit.py  steane.py
src/qjit/quantum_digital_twin/: README.md
src/qjit/quantum_digital_twin/drift_experiments/: calibration_proxies.py  snapshot.py  steane_continuous_calibration.py  steane_drift_snapshots.py  steane_drift_syndrome.py  syndrome_extraction.py
src/qjit/quantum_digital_twin/drift_experiments/tests/: test_bell_drift.py  test_drift.py  test_steane_syndrome.py
src/qjit/quantum_digital_twin/emulator/: circuit.py  device_model.py  noise_channels.py  qiskit_emulator_core.py  qpu_config.py  scheduling.py  syndrome_extraction.py
src/qjit/quantum_digital_twin/emulator/tests/: conftest.py  test_circuit.py  test_device.py  test_noise.py  test_qiskit_transpilation.py  test_scheduling.py  test_simulation.py
