[project]
name = "qjit"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.0.0",
    "qiskit>=2.0.2",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.40.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.3",
    "numba>=0.57.0",
    "llvmlite>=0.41.0",
    "tqdm>=4.67.1",
    "vl-convert-python>=1.8.0",
    "seaborn>=0.13.2",
    "corner>=2.1.0,<2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
continuous_calibration = "qjit.experiments.continuous_calibration.main:main"

[build-system]
requires = ["uv_build>=0.7.15,<0.8.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qjit*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E = pycodestyle errors, F = pyflakes, I = isort, UP = pyupgrade

[tool.pytest.ini_options]
testpaths = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

